APP4/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: alertmanager-namespace
  namespace: default
