APP4/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: alertmanager-service
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 9093
      targetPort: 9093
  selector:
    app: alertmanager
