APP4/networkpolicy.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alertmanager-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: alertmanager
  ingress:
    - from:
        - podSelector: {}
